# dialectic

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  readme.py  rust-toolchain.toml
.github/workflows/: rust.yml
benches/: mpsc.rs
dialectic/: Cargo.toml  build.rs  new-example
dialectic-compiler/: Cargo.toml  README.md
dialectic-compiler/src/: cfg.rs  flow.rs  lib.rs  parse.rs  syntax.rs  target.rs
dialectic-compiler/tests/: common.rs  misc_syntax.rs  parser_roundtrip.rs  tally_client.rs
dialectic-macro/: Cargo.toml  README.md
dialectic-macro/src/: lib.rs
dialectic-macro/tests/: loop_break_scope.rs  loop_choose_empty.rs  lots_of_jumps.rs  optional_terminators.rs
dialectic-null/: Cargo.toml  README.md
dialectic-null/src/: lib.rs
dialectic-reconnect/: Cargo.toml
dialectic-reconnect/examples/: ping.rs  pong.rs
dialectic-reconnect/src/: backoff.rs  lib.rs  maybe_bounded.rs  resume.rs  retry.rs  util.rs
dialectic-reconnect/src/resume/: end.rs
dialectic-reconnect/src/retry/: end.rs
dialectic-resumption/: Cargo.toml
dialectic-resumption/src/: lib.rs
dialectic-retry/: Cargo.toml
dialectic-retry/examples/: ping.rs  pong.rs
dialectic-retry/src/: backoff.rs  error.rs  lib.rs  resume.rs  retry.rs
dialectic-retry/src/resume/: end.rs
dialectic-retry/src/retry/: end.rs
dialectic-tokio-mpsc/: Cargo.toml  README.md
dialectic-tokio-mpsc/src/: lib.rs
dialectic-tokio-serde/: Cargo.toml  README.md
dialectic-tokio-serde-bincode/: Cargo.toml  README.md
dialectic-tokio-serde-bincode/src/: lib.rs
dialectic-tokio-serde-json/: Cargo.toml  README.md
dialectic-tokio-serde-json/src/: lib.rs
dialectic-tokio-serde/src/: error.rs  lib.rs
dialectic-tokio-serde/src/format/: bincode.rs  json.rs
dialectic/benches/: micro.rs  mpsc.rs
dialectic/examples/: README.md  common.rs  hello.rs  stack.rs  tally.rs  template.rs
dialectic/src/: backend.rs  chan.rs  error.rs  lib.rs  offer_macro.rs  session.rs  session_macro.rs  tuple.rs  tutorial.rs  types.rs  unary.rs
dialectic/src/backend/: choice.rs  mpsc.rs  null.rs  serde.rs
dialectic/src/backend/futures/: close.rs  flush.rs  receive.rs  receive_choice.rs  send.rs  send_choice.rs
dialectic/src/backend/serde/format/: bincode.rs  json.rs
dialectic/src/tuple/: impls.rs
dialectic/src/types/: call.rs  choose.rs  continue.rs  done.rs  loop.rs  offer.rs  recv.rs  send.rs  split.rs
dialectic/src/unary/: constants.rs  types.rs
examples/: README.md  common.rs  hello.rs  stack.rs  tally.rs  template.rs
examples/tally/: client.rs  server.rs
src/: backend.rs  canonical.rs  chan.rs  choice.rs  lib.rs  new_session.rs  session.rs  tutorial.rs  types.rs  unary.rs
src/backend/: call_by.rs  choice.rs  mpsc.rs  serde.rs
src/backend/serde/: bincode.rs  error.rs  format.rs  json.rs  var_length_delimited.rs
src/backend/serde/format/: bincode.rs
src/tuple/: rustfmt.toml
src/types/: break.rs  choose.rs  continue.rs  done.rs  loop.rs  offer.rs  recv.rs  send.rs  seq.rs  split.rs  tuple.rs  unary.rs
src/types/tuple/: impls.rs
src/types/unary/: constants.rs  types.rs
