[package]
name = "dialectic"
version = "0.1.1"
authors = ["Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"
license = "MIT"
description = "Transport-polymorphic, asynchronous, concurrent session types for Rust"
repository = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "protocol"]

[features]
default = ["mpsc"]
mpsc = ["tokio"]

[dependencies]
async-trait = "0.1"
thiserror = "1"
call-by = "0.1"
tokio = { version = "0.3", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "0.3", features = ["full"] }
static_assertions = "1.1"