[package]
name = "dialectic-compiler"
version = "0.1.0"
authors = ["Shea Leffler <shea@errno.com>", "Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"

[features]
default = []

[dependencies]
thunderdome = "0.4"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-crate = "1.0"
thiserror = "1.0"
quickcheck = { version = "1.0.3", optional = true }

[[test]]
name = "parser_roundtrip"
path = "tests/parser_roundtrip.rs"
required-features = ["quickcheck"]
