[package]
name = "dialectic-compiler"
version = "0.1.0"
authors = ["Shea Leffler <shea@errno.com>", "Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"
license = "MIT"
description = "Session type macro compiler for the Dialectic crate"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "macro"]
categories = ["asynchronous", "concurrency"]

[dependencies]
thunderdome = "0.6"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-crate = "1.0"
thiserror = "1.0"
quickcheck = { version = "1.0", optional = true }

[[test]]
name = "parser_roundtrip"
path = "tests/parser_roundtrip.rs"
required-features = ["quickcheck"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]