[package]
name = "dialectic-macro"
version = "0.1.0"
authors = ["Shea Leffler <shea@errno.com>", "Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
dialectic-compiler = { version = "0.1", path = "../dialectic-compiler" }
syn = { version = "1.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
dialectic = { path = "../dialectic" }
static_assertions = "1.1"
tokio = "1.2"
