[package]
name = "dialectic-macro"
version = "0.1.0"
authors = ["Shea Leffler <shea@errno.com>", "Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"
license = "MIT"
description = "Procedural macros used by and exported from the Dialectic crate"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "macro"]
categories = ["asynchronous", "concurrency"]

[lib]
proc-macro = true

[dependencies]
dialectic-compiler = { version = "0.1", path = "../dialectic-compiler" }
vesta-syntax = { version = "0.1" }
syn = { version = "1.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
dialectic = { version = "0.4", path = "../dialectic" }
dialectic-tokio-mpsc = { version = "0.1", path = "../dialectic-tokio-mpsc" }
static_assertions = "1.1"
tokio = "1.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]