[package]
name = "dialectic-reconnect"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
license = "MIT"
description = "An adapter for the Dialectic crate allowing any backend to transparently retry and resume temporarily broken connections"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "protocol"]
categories = ["asynchronous", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialectic = { version = "0.4", path = "../dialectic" }
call-by = "^0.2.3"
tokio = { version = "^1.5", features = ["sync", "time"] }
dashmap = "4"
rand = "0.8"
derivative = "2"
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
humantime-serde = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
dialectic-tokio-serde = { version = "0.1", path = "../dialectic-tokio-serde" }
dialectic-tokio-serde-json = { version = "0.1", path = "../dialectic-tokio-serde-json" }
anyhow = "1"
futures = { version = "0.3", features = ["std"], default-features = false }
vesta = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]