[package]
name = "dialectic-resumption"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialectic = { version = "0.4", path = "../dialectic" }
async-trait = "0.1"