[package]
name = "dialectic-retry"
version = "0.1.0"
authors = ["Kenny Foner <kwf@very.science>"]
edition = "2018"
license = "MIT"
description = "An adapter for the Dialectic crate allowing any backend to transparently retry and resume temporarily broken connections"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "protocol"]
categories = ["asynchronous", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialectic = { version = "0.4", path = "../dialectic" }
call-by = "0.2.3"
tokio = { version = "^1.5", features = ["sync", "time"] }
futures = { version = "0.3", features = ["std"], default-features = false }
async-trait = "0.1"
dashmap = "4"
pin-project = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]