[package]
name = "dialectic-tokio-serde-bincode"
version = "0.1.0"
authors = ["Kenny Foner <kwf@boltlabs.io>", "Shea Leffler <shea@errno.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3" }
bytes = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
dialectic-tokio-serde = { path = "../dialectic-tokio-serde" }
