[package]
name = "dialectic-tokio-serde"
version = "0.1.0"
authors = ["Kenny Foner <kwf@boltlabs.io>", "Shea Leffler <shea@errno.com>"]
edition = "2018"    
license = "MIT"
description = "tokio + serde backend for dialectic"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"

[features]
bincode = ["bincode-crate", "bytes"]
json = ["serde_json"]

[dependencies]
call-by = "0.1"
dialectic = { path = "../dialectic", features = ["serde"] }
futures = { version = "0.3", default-features = false }
serde-crate = { package = "serde", version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
bincode-crate = { package = "bincode", version = "1.3", optional = true }
serde_json = { version = "1", optional = true }
bytes = { version = "1", optional = true }
