[package]
name = "dialectic-tokio-serde"
version = "0.1.0"
authors = ["Kenny Foner <kwf@boltlabs.io>", "Shea Leffler <shea@errno.com>"]
edition = "2018"
license = "MIT"
description = "A backend builder for the Dialectic crate using Serde serialization over Tokio transport"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "protocol"]
categories = ["asynchronous", "concurrency", "encoding", "network-programming"]

[dependencies]
dialectic = { path = "../dialectic", features = ["serde"] }
futures = { version = "0.3", default-features = false }
serde = { version = "1" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]