[package]
name = "dialectic"
version = "0.4.0"
authors = ["Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"
license = "MIT"
description = "Transport-polymorphic, asynchronous session types for Rust"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "protocol"]
categories = ["asynchronous", "concurrency"]
readme = "../README.md"

[features]
default = ["serde"]
docs-features = ["tokio"]

[dependencies]
thiserror = "1"
call-by = "0.1"
tokio = { version = "1", optional = true }
tokio-util = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
futures = { version = "0.3", default-features = false }
derivative = "2.1"
pin-project = "1"
static_assertions = "1.1"
dialectic-macro = { version = "0.1", path = "../dialectic-macro" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
static_assertions = "1.1"
bincode-crate = { package = "bincode", version = "1.3" }
serde_json = "1"
serde = { version = "1" }
futures = "0.3"
bytes = "1"
colored = "2"
structopt = "0.3"
criterion = { version = "0.3", features = ["async_tokio"] }
dialectic-null = { path = "../dialectic-null" }
dialectic-tokio-mpsc = { path = "../dialectic-tokio-mpsc" }
dialectic-tokio-serde = { path = "../dialectic-tokio-serde" }
dialectic-tokio-serde-bincode = { path = "../dialectic-tokio-serde-bincode" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "micro"
harness = false

[[example]]
name = "common"
crate-type = ["staticlib"]

[[example]]
name = "hello"

[[example]]
name = "stack"

[[example]]
name = "tally"

[[example]]
name = "template"
