[package]
name = "dialectic"
version = "0.4.0"
authors = ["Kenny Foner <kwf@boltlabs.io>"]
edition = "2018"
license = "MIT"
description = "Transport-polymorphic, asynchronous session types for Rust"
repository = "https://github.com/boltlabs-inc/dialectic"
homepage = "https://github.com/boltlabs-inc/dialectic"
keywords = ["session", "types", "async", "channel", "protocol"]
categories = ["asynchronous", "concurrency"]
readme = "../README.md"

[dependencies]
thiserror = "1"
call-by = { version = "0.2" }
tokio = { version = "1", optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1", optional = true }
futures = { version = "0.3", default-features = false }
derivative = "2.1"
pin-project = "1"
static_assertions = "1.1"
dialectic-macro = { version = "0.1", path = "../dialectic-macro" }
lazy_static = "1.4"
array-init = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
static_assertions = "1.1"
serde = "1"
futures = "0.3"
colored = "2"
structopt = "0.3"
criterion = { version = "0.3", features = ["async_tokio"] }
dialectic-null = { version = "0.1", path = "../dialectic-null" }
dialectic-tokio-mpsc = { version = "0.1", path = "../dialectic-tokio-mpsc" }
dialectic-tokio-serde = { version = "0.1", path = "../dialectic-tokio-serde" }
dialectic-tokio-serde-bincode = { version = "0.1", path = "../dialectic-tokio-serde-bincode" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "micro"
harness = false

[[example]]
name = "common"
crate-type = ["staticlib"]

[[example]]
name = "hello"

[[example]]
name = "stack"

[[example]]
name = "tally"

[[example]]
name = "template"
